--- a/src/app/components/add-coworking/add-coworking.component.html
+++ b/src/app/components/add-coworking/add-coworking.component.html
@@ -125,7 +125,7 @@
           <div class="pressed-tags">
             <div class="pressed-tag" *ngFor="let selectedTag of selectedTags">
               <button type="button" (click)="toggleTag(selectedTag)">
-                <img src="assets/img/close-tag-button.svg" alt="close-tag">
+                <img src="assets/img/close-tag-button.svg" alt="close-tag" class="close-tag">
               </button>
               {{ selectedTag }}
             </div>
