--- a/src/app/components/main-webpage/coworkings-list/coworkings-list.component.css
+++ b/src/app/components/main-webpage/coworkings-list/coworkings-list.component.css
@@ -1,16 +1,18 @@
 @media screen and (max-width: 5000px) {
   .coworking {
     width: 58.33vw;
-    height: 571px;
+    height: 52.87vh;
     background: rgba(190, 218, 195, 0.7);
     border-radius: 20px;
-    margin-bottom: 37px;
+    margin-bottom: 3.426vh;
+    /* изменено с px на vh */
   }
 
   .coworking-header-container {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 35px;
+    margin-bottom: 3.241vh;
+    /* изменено с px на vh */
   }
 
   .coworking-title {
@@ -24,13 +26,14 @@
   }
 
   .img-good-place {
-    width: 22px;
-    height: 22px;
+    width: 1.1458vw;
+    height: 1.1458vw;
   }
 
   .coworking-title-container {
     display: flex;
-    margin-top: 26px;
+    margin-top: 2.407vh;
+    /* изменено с px на vh */
     align-items: center;
   }
 
@@ -42,14 +45,16 @@
   .coworking-rating {
     font-family: 'Roboto';
     font-size: 1.25vw;
-    margin-top: 33px;
+    margin-top: 2.925vh;
+    /* изменено с px на vh */
     margin-right: 0.625vw;
   }
 
   .img-star {
-    margin-top: 33px;
-    width: 22px;
-    height: 22px;
+    margin-top: 2.925vh;
+    /* изменено с px на vh */
+    width: 1.1458vw;
+    height: 1.1458vw;
   }
 
   .coworking-info-container {
@@ -61,7 +66,8 @@
     border-radius: 20px;
     margin-right: 2.65625vw;
     width: 25vw;
-    height: 415px;
+    height: 38.426vh;
+    /* изменено с px на vh */
   }
 
   .coworking-description {
@@ -71,14 +77,16 @@
     font-weight: 300;
     font-size: 1.25vw;
     line-height: 177.69%;
-    margin-bottom: 42px;
+    margin-bottom: 3.617vh;
+    /* изменено с px на vh */
   }
 
   .coworking-adress-container {
     display: flex;
     gap: 1.5104vw;
     font-size: 1.04vw;
-    margin-bottom: 28px;
+    margin-bottom: 2.593vh;
+    /* изменено с px на vh */
     align-items: center;
   }
 
@@ -114,7 +122,7 @@
   }
 
   .btn-like {
-    height: 21px;
+    height: 1.09375vw;
     margin-top: 20px;
   }
 
@@ -136,166 +144,7 @@
   }
 
   .btn-like .heart {
-    width: 21.5px;
-    height: 24px;
-  }
-}
-
-@media screen and (max-width: 1450px) {
-  .coworking {
-    height: calc(0.83*571px);
-    margin-bottom: calc(0.83*37px);
-  }
-
-  .coworking-header-container {
-    margin-bottom: calc(0.83*35px);
-  }
-
-  .coworking-title {
-    font-size: calc(0.75*28px);
-    margin-left: calc(0.75*54px);
-    margin-right: calc(0.75*16px);
-  }
-
-  .coworking-title-container {
-    margin-top: calc(0.83*26px);
-  }
-
-  .img-good-place {
-    width: calc(0.75*22px);
-    height: calc(0.75*22px);
-  }
-
-  .coworking-rating {
-    margin-top: calc(0.83*33px);
-  }
-
-  .img-star {
-    margin-top: calc(0.83*33px);
-    width: calc(0.75*22px);
-    height: calc(0.75*22px);
-  }
-
-  .coworking-image img {
-    height: calc(0.83*415px);
-  }
-
-  .coworking-description {
-    line-height: calc(0.83*177.69%);
-    margin-bottom: calc(0.83*42px);
-  }
-
-  .coworking-adress-container {
-    margin-bottom: calc(0.83*28px);
-  }
-
-  .btn-like {
-    height: calc(0.83*21px);
-    margin-top: calc(0.83*20px);
-  }
-
-  .coworking-map {
-    height: calc(0.83*54px);
-  }
-
-  .coworking-map p {
-    line-height: calc(0.83*28px);
-  }
-
-  .btn-like .heart {
-    width: calc(0.71*21.5px);
-    height: calc(0.83*24px);
-  }
-}
-
-@media screen and (max-width: 1370px) {
-  .coworking {
-    width: calc(0.71*1120px);
-    height: calc(0.71*571px);
-    margin-bottom: calc(0.71*37px);
-  }
-
-  .coworking-header-container {
-    margin-bottom: calc(0.71*35px);
-  }
-
-  .coworking-title {
-    font-size: calc(0.71*28px);
-    margin-left: calc(0.71*54px);
-    margin-right: calc(0.71*16px);
-  }
-
-  .coworking-title-container {
-    margin-top: calc(0.71*26px);
-  }
-
-  .img-good-place {
-    width: calc(0.71*22px);
-    height: calc(0.71*22px);
-  }
-
-  .coworking-rating-container {
-    margin-right: calc(0.71*64px);
-  }
-
-  .coworking-rating {
-    font-size: calc(0.71*24px);
-    margin-top: calc(0.71*33px);
-    margin-right: calc(0.71*12px);
-  }
-
-  .img-star {
-    margin-top: calc(0.71*33px);
-    width: calc(0.71*22px);
-    height: calc(0.71*22px);
-  }
-
-  .coworking-image img {
-    margin-left: calc(0.71*54px);
-    margin-right: calc(0.71*51px);
-    width: calc(0.71*480px);
-    height: calc(0.71*415px);
-  }
-
-  .coworking-description {
-    width: calc(0.71*460px);
-    font-size: calc(0.71*24px);
-    line-height: calc(0.71*177.69%);
-    margin-bottom: calc(0.71*42px);
-  }
-
-  .coworking-adress-container {
-    gap: calc(0.71*29px);
-    font-size: calc(0.71*20px);
-    margin-bottom: calc(0.71*28px);
-  }
-
-  .coworking-time-container {
-    gap: calc(0.71*26px);
-    font-size: calc(0.71*20px);
-  }
-
-  .coworking-map-and-favorite-container {
-    gap: calc(0.71*54px);
-  }
-
-  .btn-like {
-    height: calc(0.71*21px);
-    margin-top: calc(0.71*20px);
-  }
-
-  .coworking-map {
-    width: calc(0.71*275px);
-    height: calc(0.71*54px);
-  }
-
-  .coworking-map p {
-    font-size: calc(0.71*15px);
-    line-height: calc(0.71*28px);
-  }
-
-  .btn-like .heart {
-    width: calc(0.71*21.5px);
-    height: calc(0.71*24px);
+    width: 1.11979vw;
+    height: 1.25vw;
   }
 }
