--- a/src/app/components/admin/admin-banners/admin-banners.component.css
+++ b/src/app/components/admin/admin-banners/admin-banners.component.css
@@ -2,81 +2,81 @@
   .return-to-main {
     display: flex;
     margin-left: 8.75vw;
-    margin-bottom: 50px;
-    margin-top: 18px;
+    margin-bottom: 4.62962962962963vh;
+    margin-top: 1.6666666666666667vh;
     align-items: center;
   }
 
   .return-button {
-    margin-right: 18px;
+    margin-right: 0.9375vw;
     margin-top: auto;
     margin-bottom: auto;
-    width: 16px;
-    height: 16px;
+    width: 0.8333333333333334vw;
+    height: 1.4814814814814816vh;
   }
 
   .return-to-main span {
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 0.78125vw;
+    line-height: 1.8518518518518516vh;
     color: rgba(27, 31, 59, 0.65);
   }
 
   .content-container {
-    margin-left: 363px;
+    margin-left: 18.90625vw;
   }
 
   .content-container h1 {
-    margin-left: 240px;
-    font-size: 28px;
+    margin-left: 12.5vw;
+    font-size: 1.4583333333333333vw;
     font-weight: 700;
     line-height: normal;
-    margin-bottom: 17px;
+    margin-bottom: 1.574074074074074vh;
   }
 
   .content-container h2 {
-    font-size: 28px;
+    font-size: 1.4583333333333333vw;
     font-weight: 700;
     line-height: normal;
-    margin-bottom: 158px;
+    margin-bottom: 14.629629629629628vh;
   }
 
   .banners .banner {
     display: flex;
     align-items: center;
-    margin-bottom: 100px;
+    margin-bottom: 9.25925925925926vh;
   }
 
   .banners .banner img {
-    width: 379px;
-    height: 328px;
+    width: 19.739583333333332vw;
+    height: 30.37037037037037vh;
     border-radius: 10px;
   }
 
   .banners .banner .ended {
-    margin-left: 241px;
-    font-size: 24px;
+    margin-left: 12.552083333333334vw;
+    font-size: 1.25vw;
     font-weight: 600;
     line-height: 177.688%;
-    margin-right: 251px;
+    margin-right: 13.072916666666668vw;
   }
 
   .banners .banner .dates {
-    margin-left: 196px;
-    margin-right: 197px;
-    font-size: 24px;
+    margin-left: 10.208333333333334vw;
+    margin-right: 10.260416666666666vw;
+    font-size: 1.25vw;
     line-height: 177.688%;
   }
 
   .banners .banner .delete-btn {
-    width: 163px;
-    height: 54px;
+    width: 8.489583333333334vw;
+    height: 5.0vh;
     border-radius: 10px;
     background: #BED2C1;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
     color: var(--text-03, rgba(27, 31, 59, 0.40));
-    font-size: 15px;
+    font-size: 0.78125vw;
     font-weight: 600;
-    line-height: 28px;
+    line-height: 2.5925925925925926vh;
   }
 
   .banners .banner .delete-btn:hover {
@@ -94,18 +94,18 @@
 
   .header-container {
     display: flex;
-    gap: 629px;
+    gap: 32.7604vw;
   }
 
   .status {
-    width: 280px;
+    width: 14.583333333333334vw;
   }
 
   .status .position-container {
     border: none;
-    width: 280px;
-    height: 54px;
-    padding-left: 19px;
+    width: 14.583333333333334vw;
+    height: 5.0vh;
+    padding-left: 0.9895833333333333vw;
     border-radius: 10px;
     background: #E0E0D6;
     box-sizing: border-box;
@@ -113,15 +113,15 @@
 
   .status .position-container .position-label,
   .status .position-container .position-label {
-    font-size: 15px;
+    font-size: 0.78125vw;
     font-weight: 600;
-    line-height: 28px;
+    line-height: 2.5925925925925926vh;
   }
 
   .status .position-container .status-label,
   .status .position-container .status-label {
     color: var(--text-03, rgba(27, 31, 59, 0.40));
-    font-size: 15px;
+    font-size: 0.78125vw;
     font-weight: 600;
   }
 
@@ -134,7 +134,7 @@
   }
 
   .type-select__icon {
-    padding-right: 25px;
+    padding-right: 1.30208vw;
     transition: transform 0.3s linear;
   }
 
@@ -151,7 +151,7 @@
     visibility: hidden;
     opacity: 0;
     z-index: -1;
-    margin-top: 5px;
+    margin-top: 0.4629629629629629vh;
     position: absolute;
     top: 100%;
     left: 0;
@@ -161,7 +161,7 @@
     /* padding: 0.926vh 0; */
     width: 100%;
     transition: opacity 0.2s ease-out, height 0.2s ease-out;
-    height: 110px;
+    height: 10.185185185185185vh;
   }
 
   .position-dropdown.show {
@@ -177,12 +177,11 @@
     font-weight: 400;
     line-height: 1.85vh;
     display: flex;
-    gap: 10px;
+    gap: 0.5208vw;
     align-items: center;
   }
 
   .position-option:hover {
     opacity: 0.5;
   }
-
 }
