--- a/src/app/components/admin/admin-role/admin-role.component.css
+++ b/src/app/components/admin/admin-role/admin-role.component.css
@@ -2,40 +2,46 @@
   .return-to-main {
     display: flex;
     margin-left: 8.75vw;
-    margin-bottom: 134px;
-    margin-top: 18px;
+    margin-bottom: 12.407407407407407vh;
+    margin-top: 1.6666666666666667vh;
     align-items: center;
   }
 
   .return-button {
-    margin-right: 18px;
+    margin-right: 0.9375vw;
     margin-top: auto;
     margin-bottom: auto;
-    width: 16px;
-    height: 16px;
+    width: 0.8333333333333334vw;
+    height: 1.4814814814814816vh;
   }
 
   .return-to-main span {
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 0.78125vw;
+    line-height: 1.8518518518518516vh;
     color: rgba(27, 31, 59, 0.65);
   }
 
+  .wrapper {
+    display: flex;
+  }
+
   .content-container {
-    margin-left: 20.83vw;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .search {
     display: flex;
-    gap: 38px;
-    margin-bottom: 138px;
+    gap: 1.9791666666666665vw;
+    margin-bottom: 12.777777777777777vh;
+    margin-left: 3.4375vw;
   }
 
   .search-container {
     display: flex;
-    gap: 17px;
+    gap: 0.8854166666666666vw;
     width: 44.8958vw;
-    height: 54px;
+    height: 5.0vh;
     background: #FBFBF5;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
@@ -45,7 +51,7 @@
 
   .search-container-input {
     width: 44.89583vw;
-    font-size: 15px;
+    font-size: 0.78125vw;
     background: #FBFBF5;
     font-weight: 300;
   }
@@ -64,65 +70,70 @@
   }
 
   .btn-find-employee {
-    width: 191px;
+    width: 9.9479vw;
     background-color: #E0E0D6 !important;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
     font-weight: 600;
     color: rgba(27, 31, 59, 0.6);
-    font-size: 15px;
+    font-size: 0.78125vw;
   }
 
-  .users {
-    margin-left: 63px;
-  }
+  .users {}
 
   .users .user {
     display: flex;
-    width: 956.617px;
-    margin-bottom: 68px;
+    width: 60.9375vw;
+    margin-bottom: 6.296296296296296vh;
   }
 
   .users .user .avatar {
-    width: 70px;
-    height: 70px;
-    border: 2px #5E9C76 solid;
+    width: 3.6458333333333335vw;
+    height: 3.6458333333333335vw;
     box-sizing: border-box;
     border-radius: 50%;
-    margin-right: 27px;
+    margin-right: 1.40625vw;
   }
 
   .users .user .user-information .user-name {
-    font-size: 20px;
-    line-height: 28px;
-    margin-bottom: 7px;
+    font-size: 1.0416666666666665vw;
+    line-height: 2.5925925925925926vh;
+    margin-bottom: 0.6481481481481481vh;
   }
 
   .users .user .user-information .user-role {
-    font-size: 15px;
-    line-height: 28px;
+    font-size: 0.78125vw;
+    line-height: 2.5925925925925926vh;
   }
 
-  .users .user .change-status-btn {
+  .users .user .profile-btn {
     margin-left: auto;
-    width: 239.617px;
-    height: 54px;
+    width: 9.9479vw;
+    height: 5.0vh;
     border-radius: 10px;
-    background: rgba(190, 218, 195, 0.70);
+    background: #E0E0D6;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
 
     color: var(--text-03, rgba(27, 31, 59, 0.40));
-    font-size: 15px;
+    font-size: 0.78125vw;
     font-weight: 600;
-    line-height: 28px;
+    line-height: 2.5925925925925926vh;
   }
 
-  .users .user .change-status-btn:hover {
+  .users .user .profile-btn:hover {
     background-color: #EDFAED;
     outline: 1px solid #6A6D79;
   }
 
-  .users .user .change-status-btn:active {
+  .users .user .profile-btn:active {
     background: #8EBD9D !important;
+  }
+
+  .loader-icon {
+    position: absolute;
+    top: calc(1000px/2);
+    left: calc(100vw/2);
+    font-size: 2.604166666666667vw;
+    animation: fa-spin 0.7s infinite linear;
   }
 }
