--- a/src/app/components/admin/requests-to-add/request/request.component.css
+++ b/src/app/components/admin/requests-to-add/request/request.component.css
@@ -1,54 +1,54 @@
 @media screen and (max-width: 5000px) {
   .return-to-main {
     display: flex;
-    margin-left: 168px;
-    margin-bottom: 70px;
-    margin-top: 18px;
+    margin-left: 8.75vw;
+    margin-bottom: 6.481481481481481vh;
+    margin-top: 1.6666666666666667vh;
     align-items: center;
   }
 
   .return-button {
-    margin-right: 18px;
+    margin-right: 0.9375vw;
     margin-top: auto;
     margin-bottom: auto;
-    width: 16px;
-    height: 16px;
+    width: 0.8333333333333334vw;
+    height: 1.4814814814814816vh;
   }
 
   .return-to-main span {
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 0.78125vw;
+    line-height: 1.8518518518518516vh;
     color: rgba(27, 31, 59, 0.65);
   }
 
   .content-container {
-    margin-left: 480px;
+    margin-left: 25.0vw;
   }
 
   .content-container h1 {
-    font-size: 28px;
+    font-size: 1.4583333333333333vw;
     font-weight: 700;
     line-height: normal;
-    margin-bottom: 52px;
+    margin-bottom: 4.814814814814815vh;
   }
 
   .content-container h2 {
-    font-size: 28px;
+    font-size: 1.4583333333333333vw;
     line-height: normal;
-    margin-left: 90px;
-    margin-bottom: 26px;
+    margin-left: 4.6875vw;
+    margin-bottom: 2.4074074074074074vh;
   }
 
   .application-container {
-    width: 954px;
+    width: 49.6875vw;
     border-radius: 20px;
     background: rgba(190, 218, 195, 0.70);
-    margin-bottom: 79px;
+    margin-bottom: 7.314814814814814vh;
   }
 
   .content {
-    padding-left: 140px;
-    padding-top: 57px;
+    padding-left: 7.291666666666667vw;
+    padding-top: 5.277vh;
   }
 
   .flex {
@@ -56,15 +56,15 @@
   }
 
   .text-left-side {
-    min-width: 311px;
-    font-size: 20px;
+    min-width: 16.197916666666668vw;
+    font-size: 1.0416666666666665vw;
     line-height: 177.688%;
     /* 35.538px */
   }
 
   .text-right-side {
-    width: 478px;
-    font-size: 20px;
+    width: 24.895833333333332vw;
+    font-size: 1.0416666666666665vw;
     font-weight: 600;
     line-height: 177.688%;
     word-wrap: break-word;
@@ -72,18 +72,18 @@
   }
 
   .text-right-side span {
-    font-size: 20px;
+    font-size: 1.0416666666666665vw;
     line-height: 177.688%;
     word-wrap: break-word;
     /* 35.538px */
   }
 
   .place {
-    margin-bottom: 28px;
+    margin-bottom: 2.5925925925925926vh;
   }
 
   .description {
-    font-size: 22px;
+    font-size: 1.1458333333333333vw;
     font-weight: 300;
     line-height: 177.688%;
   }
@@ -94,8 +94,8 @@
   }
 
   .photo {
-    width: 343px;
-    height: 165px;
+    width: 17.864583333333332vw;
+    height: 15.277777777777779vh;
     border-radius: 20px;
   }
 
@@ -106,7 +106,7 @@
     transform: translateY(-50%);
     background: transparent;
     border: none;
-    font-size: 24px;
+    font-size: 1.25vw;
     cursor: pointer;
     color: #1B1F3B;
   }
@@ -122,30 +122,30 @@
   .photo button {
     background: none;
     border: none;
-    font-size: 20px;
+    font-size: 1.0416666666666665vw;
     cursor: pointer;
-    margin: 0 10px;
+    margin: 0 0.52083vw;
   }
 
   .buttons .btn {
-    width: 163px;
-    height: 54px;
+    width: 8.489583333333334vw;
+    height: 5.0vh;
     border-radius: 10px;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
 
     color: var(--text-03, rgba(27, 31, 59, 0.40));
     font-family: Open Sans;
-    font-size: 15px;
+    font-size: 0.78125vw;
     font-style: normal;
     font-weight: 600;
-    line-height: 28px;
+    line-height: 2.5925925925925926vh;
 
-    margin-bottom: 55px;
+    margin-bottom: 5.092592592592593vh;
   }
 
   .buttons .approved {
     background: #FBFBF5;
-    margin-right: 43px;
+    margin-right: 2.2395833333333335vw;
   }
 
   .buttons .deny {
@@ -164,16 +164,16 @@
   }
 
   .return {
-    width: 189px;
-    height: 54px;
+    width: 9.84375vw;
+    height: 5.0vh;
     border-radius: 10px;
     background: #E0E0D6;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
     color: var(--text-03, rgba(27, 31, 59, 0.40));
-    font-size: 15px;
+    font-size: 0.78125vw;
     font-weight: 600;
-    line-height: 28px;
-    margin-bottom: 77px;
+    line-height: 2.5925925925925926vh;
+    margin-bottom: 7.12962962962963vh;
   }
 
   .overlay {
@@ -195,8 +195,7 @@
   }
 
   .popup img {
-    width: 555px;
-    height: 292px;
+    width: 28.90625vw;
+    height: 27.037037037037038vh;
   }
-
 }
