--- a/src/app/components/admin/requests-to-add/requests-to-add.component.css
+++ b/src/app/components/admin/requests-to-add/requests-to-add.component.css
@@ -2,22 +2,22 @@
   .return-to-main {
     display: flex;
     margin-left: 8.75vw;
-    margin-bottom: 70px;
-    margin-top: 18px;
+    margin-bottom: 6.481481481481481vh;
+    margin-top: 1.6666666666666667vh;
     align-items: center;
   }
 
   .return-button {
-    margin-right: 18px;
+    margin-right: 0.9375vw;
     margin-top: auto;
     margin-bottom: auto;
-    width: 16px;
-    height: 16px;
+    width: 0.8333333333333334vw;
+    height: 1.4814814814814816vh;
   }
 
   .return-to-main span {
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 0.78125vw;
+    line-height: 1.8518518518518516vh;
     color: rgba(27, 31, 59, 0.65);
   }
 
@@ -27,15 +27,15 @@
 
   .content-container h1 {
     color: #000;
-    font-size: 28px;
+    font-size: 1.4583333333333333vw;
     font-weight: 700;
     line-height: normal;
-    margin-bottom: 23px;
+    margin-bottom: 2.1296296296296298vh;
   }
 
   .sort-applications-container {
     display: flex;
-    margin-bottom: 48px;
+    margin-bottom: 4.444444444444445vh;
   }
 
   input {
@@ -44,40 +44,40 @@
 
   .input-field select {
     border: none;
-    width: 280px;
-    height: 54px;
-    padding-left: 19px;
+    width: 14.583333333333334vw;
+    height: 5.0vh;
+    padding-left: 0.9895833333333333vw;
     border-radius: 10px;
     color: #000;
-    font-size: 15px;
+    font-size: 0.78125vw;
     font-weight: 600;
-    line-height: 28px;
+    line-height: 2.5925925925925926vh;
     font-family: 'Open Sans';
     background: #E0E0D6;
   }
 
   .sort-applications-container .date {
-    margin-right: 50px;
+    margin-right: 2.604166666666667vw;
   }
 
   .content-header {
     display: flex;
-    gap: 313px;
+    gap: 16.302083333333332vw;
     margin-left: 2.08vw;
-    margin-bottom: 14px;
+    margin-bottom: 1.2962962962962963vh;
   }
 
   .content-container h5 {
     color: #535353;
-    font-size: 15px;
+    font-size: 0.78125vw;
     font-weight: 400;
     line-height: 177.688%;
   }
 
   .cards .card-li {
-    width: 1070px;
-    height: 99px;
-    margin-bottom: 30px;
+    width: 55.729166666666664vw;
+    height: 9.166666666666666vh;
+    margin-bottom: 2.7777777777777777vh;
   }
 
   .cards .card {
@@ -97,41 +97,41 @@
   }
 
   .card .first-block__card {
-    width: 460px;
+    width: 23.958333333333336vw;
     height: inherit;
-    padding-top: 16px;
-    padding-left: 27px;
-    margin-right: 5px;
+    padding-top: 1.4814814vh;
+    padding-left: 1.40625vw;
+    margin-right: 0.26041666666666663vw;
     box-sizing: border-box;
   }
 
   .card-title {
-    font-size: 24px;
+    font-size: 1.25vw;
     font-weight: 700;
     line-height: normal;
-    margin-bottom: 14px;
+    margin-bottom: 1.2962962962962963vh;
   }
 
   .adress {
-    font-size: 15px;
+    font-size: 0.78125vw;
   }
 
   .second-block__card {
-    width: 80px;
+    width: 4.166666666666666vw;
   }
 
   .second-block__card h4 {
-    font-size: 15px;
+    font-size: 0.78125vw;
   }
 
   .third-block_card {
     margin-left: auto;
-    margin-right: 36px;
+    margin-right: 1.875vw;
   }
 
   .third-block_card .watch-application {
-    width: 240px;
-    height: 54px;
+    width: 12.5vw;
+    height: 5.0vh;
     border-radius: 10px;
     background: #FBFBF5;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
@@ -147,41 +147,40 @@
 
   .third-block_card .watch-application span {
     color: var(--text-03, rgba(27, 31, 59, 0.40));
-    font-size: 15px;
+    font-size: 0.78125vw;
     font-weight: 600;
-    line-height: 28px;
+    line-height: 2.5925925925925926vh;
   }
 
   .information-description {
     display: flex;
+    align-items: center;
     margin-left: auto;
-    margin-right: 60px;
-    gap: 27px;
+    margin-right: 3.125vw;
+    gap: 1.40625vw;
   }
 
   .information-description .highlighted-text {
-    font-size: 15px;
+    font-size: 0.78125vw;
     font-weight: 600;
-    line-height: 28px;
+    line-height: 2.5925925925925926vh;
   }
-
-
 
   .input-containers {
     display: flex;
-    gap: 48px;
-    margin-bottom: 50px;
+    gap: 2.5vw;
+    margin-bottom: 4.62962962962963vh;
   }
 
   .status {
-    width: 280px;
+    width: 14.583333333333334vw;
   }
 
   .status .position-container {
     border: none;
-    width: 280px;
-    height: 54px;
-    padding-left: 19px;
+    width: 14.583333333333334vw;
+    height: 5.0vh;
+    padding-left: 0.9895833333333333vw;
     border-radius: 10px;
     background: #E0E0D6;
     box-sizing: border-box;
@@ -189,15 +188,15 @@
 
   .status .position-container .position-label,
   .status .position-container .position-label {
-    font-size: 15px;
+    font-size: 0.78125vw;
     font-weight: 600;
-    line-height: 28px;
+    line-height: 2.5925925925925926vh;
   }
 
   .status .position-container .status-label,
   .status .position-container .status-label {
     color: var(--text-03, rgba(27, 31, 59, 0.40));
-    font-size: 15px;
+    font-size: 0.78125vw;
     font-weight: 600;
   }
 
@@ -210,7 +209,7 @@
   }
 
   .type-select__icon {
-    padding-right: 25px;
+    padding-right: 1.30208vw;
     transition: transform 0.3s linear;
   }
 
@@ -227,7 +226,7 @@
     visibility: hidden;
     opacity: 0;
     z-index: -1;
-    margin-top: 5px;
+    margin-top: 0.4629629629629629vh;
     position: absolute;
     top: 100%;
     left: 0;
@@ -237,11 +236,11 @@
     /* padding: 0.926vh 0; */
     width: 100%;
     transition: opacity 0.2s ease-out, height 0.2s ease-out;
-    height: 110px;
+    height: 10.185185185185185vh;
   }
 
   .big {
-    height: 165px;
+    height: 15.277777777777779vh;
   }
 
   .position-dropdown.show {
@@ -257,12 +256,17 @@
     font-weight: 400;
     line-height: 1.85vh;
     display: flex;
-    gap: 10px;
+    gap: 0.5208333333333333vw;
     align-items: center;
   }
 
   .position-option:hover {
     opacity: 0.5;
+  }
+
+  .information-description img {
+    width: 1.35416vw;
+    height: 1.35416vw;
   }
 
 }
