--- a/src/app/components/favourites-page/favourites-page.component.css
+++ b/src/app/components/favourites-page/favourites-page.component.css
@@ -11,61 +11,54 @@
     border-radius: 10px;
   }
 
-  /* .pagination {
-    display: flex;
-    justify-self: center;
-    align-items: center;
-    margin-left: 100px;
-  } */
-
   .wrapper {
     min-height: calc(100% - 150px);
   }
 
   .footer {
     margin-top: -300px;
-    height: 300px;
+    height: 27.77777777777778vh;
   }
 
   .return-to-main {
     display: flex;
-    width: 180px;
-    margin-left: 168px;
-    margin-bottom: 65px;
-    margin-top: 18px;
+    width: 9.375vw;
+    margin-left: 8.75vw;
+    margin-bottom: 6.018518518518518vh;
+    margin-top: 1.6666666666666667vh;
     align-items: center;
   }
 
   .return-button {
-    margin-right: 18px;
+    margin-right: 0.9375vw;
     margin-top: auto;
     margin-bottom: auto;
-    width: 16px;
-    height: 16px;
+    width: 0.8333333333333334vw;
+    height: 1.4814814814814816vh;
   }
 
   .return-to-main span {
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 0.78125vw;
+    line-height: 1.8518518518518516vh;
     color: rgba(27, 31, 59, 0.65);
   }
 
   .main-top-content {
     display: flex;
-    margin-left: 202px;
-    padding-bottom: 300px;
+    margin-left: 10.520833333333334vw;
+    padding-bottom: 27.777vh;
   }
 
   .profile-navigation {
-    width: 238px;
-    margin-right: 60px;
-    margin-top: 31px;
+    width: 12.395833333333334vw;
+    margin-right: 3.125vw;
+    margin-top: 2.8703703703703702vh;
   }
 
   .profile-navigation li {
-    font-size: 20px;
+    font-size: 1.0416666666666665vw;
     line-height: 177.69%;
-    margin-bottom: 16px;
+    margin-bottom: 1.4814814814814816vh;
   }
 
   .profile-navigation li:last-child {
@@ -73,149 +66,26 @@
   }
 
   .top-information__header {
-    margin-bottom: 43px;
+    margin-bottom: 3.981481481481482vh;
     font-style: normal;
     font-weight: 700;
-    font-size: 28px;
-    line-height: 38px;
+    font-size: 1.4583333333333333vw;
+    line-height: 3.5185185185185186vh;
     color: #000000;
   }
 
   .wait-information {
-    width: 1300px;
+    width: 67.70833333333334vw;
     font-weight: 700;
-    font-size: 24px;
-    line-height: 38px;
+    font-size: 1.25vw;
+    line-height: 3.5185185185185186vh;
     color: black;
   }
 
   .top-information__card {
-    width: 1070px;
-    height: 571px;
+    width: 55.729166666666664vw;
+    height: 52.87037037037037vh;
     background: #D1E5D2;
     border-radius: 20px;
   }
-
-}
-
-@media screen and (max-width: 1450px) {
-
-  .footer {
-    margin-top: calc(0.83*-300px);
-    height: calc(0.83*300px);
-  }
-
-  .return-to-main {
-    width: calc(0.75*180px);
-    margin-left: calc(0.75*168px);
-    margin-bottom: calc(0.83*65px);
-    margin-top: calc(0.83*18px);
-  }
-
-  .return-button {
-    margin-right: calc(0.75*18px);
-    width: calc(0.75*16px);
-    height: calc(0.83*16px);
-  }
-
-  .return-to-main span {
-    font-size: calc(0.75*15px);
-    line-height: calc(0.83*20px);
-  }
-
-  .main-top-content {
-    margin-left: calc(0.75*202px);
-    padding-bottom: calc(0.83*300px);
-  }
-
-  .profile-navigation {
-    width: calc(0.75*238px);
-    margin-right: calc(0.75*60px);
-    margin-top: calc(0.83*31px);
-  }
-
-  .profile-navigation li {
-    font-size: calc(0.75*20px);
-    line-height: calc(0.83*177.69%);
-    margin-bottom: calc(0.83*16px);
-  }
-
-  .top-information__header {
-    margin-bottom: calc(0.83*43px);
-    font-size: calc(0.75*28px);
-    line-height: calc(0.83*38px);
-  }
-
-  .wait-information {
-    width: calc(0.75*1300px);
-    font-size: calc(0.75*24px);
-    line-height: calc(0.83*38px);
-  }
-
-  .top-information__card {
-    width: calc(0.75*1070px);
-    height: calc(0.83*571px);
-  }
-
-}
-
-@media screen and (max-width: 1370px) {
-
-  .footer {
-    margin-top: calc(0.71*-300px);
-    height: calc(0.71*300px);
-  }
-
-  .return-to-main {
-    width: calc(0.71*180px);
-    margin-left: calc(0.71*168px);
-    margin-bottom: calc(0.71*65px);
-    margin-top: calc(0.71*18px);
-  }
-
-  .return-button {
-    margin-right: calc(0.71*18px);
-    width: calc(0.71*16px);
-    height: calc(0.71*16px);
-  }
-
-  .return-to-main span {
-    font-size: calc(0.71*15px);
-    line-height: calc(0.71*20px);
-  }
-
-  .main-top-content {
-    margin-left: calc(0.71*202px);
-    padding-bottom: calc(0.71*300px);
-  }
-
-  .profile-navigation {
-    width: calc(0.71*238px);
-    margin-right: calc(0.71*60px);
-    margin-top: calc(0.71*31px);
-  }
-
-  .profile-navigation li {
-    font-size: calc(0.71*20px);
-    line-height: calc(0.71*177.69%);
-    margin-bottom: calc(0.71*16px);
-  }
-
-  .top-information__header {
-    margin-bottom: calc(0.71*43px);
-    font-size: calc(0.71*28px);
-    line-height: calc(0.71*38px);
-  }
-
-  .wait-information {
-    width: calc(0.71*1300px);
-    font-size: calc(0.71*24px);
-    line-height: calc(0.71*38px);
-  }
-
-  .top-information__card {
-    width: calc(0.71*1070px);
-    height: calc(0.71*571px);
-  }
-
 }
