--- a/src/app/components/login-page/login-page.component.css
+++ b/src/app/components/login-page/login-page.component.css
@@ -1,25 +1,25 @@
 @media screen and (max-width: 5000px) {
   .header-container {
-    width: 1578.49px;
-    height: 94.5px;
-    margin-top: 27px;
-    margin-left: 172px;
-    margin-bottom: 140px;
+    width: 82.21302083333335vw;
+    height: 8.75vh;
+    margin-top: 2.5vh;
+    margin-left: 8.958333333333334vw;
+    margin-bottom: 12.962962962962962vh;
     border-bottom: 2px solid #e9e9e9;
   }
 
   .header-container a {
     font-weight: 300;
-    font-size: 48px;
-    line-height: 56px;
+    font-size: 2.5vw;
+    line-height: 5.185185185185185vh;
   }
 
   .logo-img1 {
     position: absolute;
-    width: 50px;
-    height: 49.74px;
-    left: 165px;
-    top: 30px;
+    width: 2.604166666666667vw;
+    height: 4.605555555555556vh;
+    left: 8.59375vw;
+    top: 2.77777778vh;
 
     background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
     filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
@@ -31,14 +31,14 @@
   .card {
     display: flex;
     justify-content: space-between;
-    width: 1581px;
-    height: 522px;
-    margin-left: 203px;
+    width: 82.34375vw;
+    height: 48.333333333333336vh;
+    margin-left: 10.572916666666666vw;
   }
 
   .card-left-side {
-    font-size: 48px;
-    line-height: 65px;
+    font-size: 2.5vw;
+    line-height: 6.018518518518518vh;
     color: #000000;
   }
 
@@ -48,10 +48,10 @@
 
   .logo-img2 {
     position: absolute;
-    width: 50px;
-    height: 49.74px;
-    left: 197px;
-    top: 335px;
+    width: 2.604166666666667vw;
+    height: 4.605555555555556vh;
+    left: 10.260416666666666666666666667vw;
+    top: 31.01851851vh;
 
     background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
     filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
@@ -61,43 +61,43 @@
   }
 
   .card-right-side {
-    width: 774px;
+    width: 40.3125vw;
     background: rgba(190, 218, 195, 0.7);
     border-radius: 20px;
   }
 
   .input-field {
-    width: 560px;
-    height: 60px;
+    width: 29.166666666666668vw;
+    height: 5.555555555555555vh;
     border-radius: 10px;
-    margin-left: 107px;
+    margin-left: 5.572916666666667vw;
     background: #FBFBF5;
   }
 
   .input-field input {
-    width: 528px;
-    height: 57px;
+    width: 27.500000000000004vw;
+    height: 5.277777777777778vh;
     font-weight: 300;
-    font-size: 15px;
-    line-height: 28px;
-    padding-left: 28px;
+    font-size: 0.78125vw;
+    line-height: 2.5925925925925926vh;
+    padding-left: 1.4583333333333333vw;
     background: #FBFBF5;
     border-radius: 10px;
   }
 
   .phone {
-    margin-top: 65px;
-    margin-bottom: 35px;
+    margin-top: 6.018518518518518vh;
+    margin-bottom: 3.2407407407407405vh;
   }
 
   .sign-in {
-    width: 275px;
-    height: 54px;
+    width: 14.322916666666666vw;
+    height: 5.0vh;
     background: #E0E0D6;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
-    margin-left: 249px;
-    margin-top: 40px;
+    margin-left: 12.968750000000002vw;
+    margin-top: 3.7037037037037033vh;
   }
 
   .sign-in:hover,
@@ -116,22 +116,22 @@
     height: 100%;
     color: rgba(27, 31, 59, 0.6);
     font-weight: 600;
-    font-size: 15px;
-    line-height: 28px;
+    font-size: 0.78125vw;
+    line-height: 2.5925925925925926vh;
   }
 
   .container-sign-up {
-    width: 355px;
-    height: 28px;
-    margin-top: 128px;
-    padding-left: 209px;
-    font-size: 15px;
-    line-height: 28px;
+    width: 18.489583333333336vw;
+    height: 2.5925925925925926vh;
+    margin-top: 11.851851851851853vh;
+    padding-left: 10.885416666666666vw;
+    font-size: 0.78125vw;
+    line-height: 2.5925925925925926vh;
   }
 
   .container-sign-up span {
     color: rgba(27, 31, 59, 0.6);
-    margin-right: 12px;
+    margin-right: 0.625vw;
   }
 
   .container-sign-up a {
@@ -140,13 +140,13 @@
   }
 
   .helper-text {
-    font-size: 15px;
+    font-size: 0.78125vw;
   }
 
   .red-text {
     display: inline-block;
     color: red;
-    padding-top: 10px;
+    padding-top: 0.925925vh;
   }
 
   .invalid {
@@ -156,198 +156,5 @@
   .clear {
     opacity: 50%;
     background-color: #f5f5f2;
-  }
-}
-
-@media screen and (max-width: 1450px) {
-  .header-container {
-    width: calc(0.75*1578.49px);
-    height: calc(0.83*94.5px);
-    margin-top: calc(0.83*27px);
-    margin-left: calc(0.75*172px);
-    margin-bottom: calc(0.83*140px);
-  }
-
-  .header-container a {
-    font-size: calc(0.75*48px);
-    line-height: calc(0.83*56px);
-  }
-
-  .logo-img1 {
-    width: calc(0.75*50px);
-    height: calc(0.83*49.74px);
-    left: calc(0.75*165px);
-    top: calc(0.83*30px);
-  }
-
-  .card {
-    width: calc(0.75*1581px);
-    height: calc(0.83*522px);
-    margin-left: calc(0.75*203px);
-  }
-
-  .card-left-side {
-    font-size: calc(0.75*48px);
-    line-height: calc(0.83*65px);
-  }
-
-  .logo-img2 {
-    width: calc(0.75*50px);
-    height: calc(0.75*49.74px);
-    left: calc(0.75*197px);
-    top: calc(0.83*335px);
-  }
-
-  .card-right-side {
-    width: calc(0.75*774px);
-  }
-
-  .input-field {
-    width: calc(0.75*560px);
-    height: calc(0.83*60px);
-    margin-left: calc(0.75*107px);
-  }
-
-  .input-field input {
-    width: calc(0.75*528px);
-    height: calc(0.83*57px);
-    font-size: calc(0.75*15px);
-    line-height: calc(0.83*28px);
-    padding-left: calc(0.75*28px);
-  }
-
-  .phone {
-    margin-top: calc(0.83*65px);
-    margin-bottom: calc(0.83*35px);
-  }
-
-  .sign-in {
-    width: calc(0.75*275px);
-    height: calc(0.83*54px);
-    margin-left: calc(0.75*249px);
-    margin-top: calc(0.83*40px);
-  }
-
-  .btn-sign-in {
-    font-size: calc(0.75*15px);
-    line-height: calc(0.83*28px);
-  }
-
-  .container-sign-up {
-    width: calc(0.75*355px);
-    height: calc(0.83*28px);
-    margin-top: calc(0.83*128px);
-    padding-left: calc(0.75*209px);
-    font-size: calc(0.75*15px);
-    line-height: calc(0.83*28px);
-  }
-
-  .container-sign-up span {
-    margin-right: calc(0.75*12px);
-  }
-
-  .helper-text {
-    font-size: calc(0.75*15px);
-  }
-
-  .red-text {
-    padding-top: calc(0.83*10px);
-  }
-}
-
-@media screen and (max-width: 1370px) {
-  .header-container {
-    width: calc(0.71*1578.49px);
-    height: calc(0.71*94.5px);
-    margin-top: calc(0.71*27px);
-    margin-left: calc(0.71*172px);
-    margin-bottom: calc(0.71*140px);
-  }
-
-  .header-container a {
-    font-size: calc(0.71*48px);
-    line-height: calc(0.71*56px);
-  }
-
-  .logo-img1 {
-    width: calc(0.71*50px);
-    height: calc(0.71*49.74px);
-    left: calc(0.71*165px);
-    top: calc(0.71*30px);
-  }
-
-  .card {
-    width: calc(0.71*1581px);
-    height: calc(0.71*522px);
-    margin-left: calc(0.71*203px);
-  }
-
-  .card-left-side {
-    font-size: calc(0.71*48px);
-    line-height: calc(0.71*65px);
-  }
-
-  .logo-img2 {
-    width: calc(0.71*50px);
-    height: calc(0.71*49.74px);
-    left: calc(0.71*197px);
-    top: calc(0.71*335px);
-  }
-
-  .card-right-side {
-    width: calc(0.71*774px);
-  }
-
-  .input-field {
-    width: calc(0.71*560px);
-    height: calc(0.71*60px);
-    margin-left: calc(0.71*107px);
-  }
-
-  .input-field input {
-    width: calc(0.71*528px);
-    height: calc(0.71*57px);
-    font-size: calc(0.71*15px);
-    line-height: calc(0.71*28px);
-    padding-left: calc(0.71*28px);
-  }
-
-  .phone {
-    margin-top: calc(0.71*65px);
-    margin-bottom: calc(0.71*35px);
-  }
-
-  .sign-in {
-    width: calc(0.71*275px);
-    height: calc(0.71*54px);
-    margin-left: calc(0.71*249px);
-    margin-top: calc(0.71*40px);
-  }
-
-  .btn-sign-in {
-    font-size: calc(0.71*15px);
-    line-height: calc(0.71*28px);
-  }
-
-  .container-sign-up {
-    width: calc(0.71*355px);
-    height: calc(0.71*28px);
-    margin-top: calc(0.71*128px);
-    padding-left: calc(0.71*209px);
-    font-size: calc(0.71*15px);
-    line-height: calc(0.71*28px);
-  }
-
-  .container-sign-up span {
-    color: rgba(27, 31, 59, 0.6);
-    margin-right: calc(0.71*12px);
-  }
-
-  .helper-text {
-    font-size: calc(0.71*15px);
-  }
-
-  .red-text {
-    padding-top: calc(0.71*10px);
   }
 }
