--- a/src/app/components/place-settings/place-settings.component.css
+++ b/src/app/components/place-settings/place-settings.component.css
@@ -1,29 +1,34 @@
 @media screen and (max-width: 5000px) {
   .return-to-main {
     display: flex;
-    width: 180px;
-    margin-left: 168px;
-    margin-bottom: 65px;
-    margin-top: 18px;
+    width: 9.375vw;
+    /* изменено с px на vw */
+    margin-left: 8.75vw;
+    /* изменено с px на vw */
+    margin-bottom: 6.01852vh;
+    /* изменено с px на vh */
+    margin-top: 1.66667vh;
+    /* изменено с px на vh */
     align-items: center;
   }
 
   .return-button {
-    margin-right: 18px;
+    margin-right: 0.9375vw;
+    /* изменено с px на vw */
     margin-top: auto;
     margin-bottom: auto;
-    width: 16px;
-    height: 16px;
+    width: 0.83333vw;
+    height: 0.83333vw;
   }
 
   .return-to-main span {
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 0.78125vw;
+    line-height: 1.8518vh;
     color: rgba(27, 31, 59, 0.65);
   }
 
   .wrapper {
-    min-height: calc(100% - 150px);
+    min-height: calc(100%);
   }
 
   .content {
@@ -33,8 +38,8 @@
   .main-top-content {
     flex: 1 0 auto;
     display: flex;
-    margin-left: 202px;
-    margin-top: 65px;
+    margin-left: 10.520833vw;
+    margin-top: 6.0185vh;
   }
 
   .footer {
@@ -42,16 +47,16 @@
   }
 
   .profile-navigation {
-    width: 238px;
-    margin-right: 60px;
-    margin-top: 31px;
-    margin-bottom: 600px;
+    width: 12.3958vw;
+    margin-right: 3.125vw;
+    margin-top: 2.87vh;
+    margin-bottom: 55.555vh;
   }
 
   .profile-navigation li {
-    font-size: 20px;
+    font-size: 1.0416vw;
     line-height: 177.69%;
-    margin-bottom: 16px;
+    margin-bottom: 1.48148vh;
   }
 
   .profile-navigation li:last-child {
@@ -60,48 +65,51 @@
 
   .title {
     font-weight: 700;
-    font-size: 28px;
-    line-height: 38px;
-    margin-bottom: 11px;
+    font-size: 1.45833vw;
+    line-height: 3.5185vh;
+    margin-bottom: 1.0185vh;
   }
 
   .description {
     display: inline-block;
     font-weight: 400;
-    font-size: 24px;
-    line-height: 43px;
+    font-size: 1.25vw;
+    line-height: 3.9814vh;
   }
 
   .explanations {
     display: flex;
     list-style: none;
-    margin-top: 45px;
-    padding-left: 27px;
+    margin-top: 4.1666vh;
+    padding-left: 1.40625vw;
   }
 
   .explanations-li {
-    max-width: 158px;
+    max-width: 8.22916vw;
     font-weight: 400;
-    font-size: 15px;
-    line-height: 27px;
+    font-size: 0.78125vw;
+    line-height: 2.5vh;
     color: #535353;
   }
 
   .explanations-li {
-    margin-right: 118px;
+    margin-right: 6.14583vw;
   }
 
   .card {
-    padding-left: 27px;
-    padding-bottom: 15px;
     box-sizing: border-box;
     position: relative;
     display: flex;
-    width: 1070px;
-    height: 99px;
+    width: 55.72916vw;
+    height: 9.166vh;
     background: rgba(190, 218, 195, 0.7);
     border-radius: 20px;
     align-items: center;
+  }
+
+  .first-block__card {
+    margin-left: 1.40625vw;
+    min-width: 39.0625vw;
   }
 
   .denied {
@@ -110,20 +118,20 @@
 
   .information-description {
     display: flex;
-    margin-left: 7px;
-    margin-top: 15px;
+    margin-left: 0.36458vw;
+    margin-top: 1.3888vh;
     position: relative;
     align-items: center;
   }
 
   .information-description img {
-    width: 26px;
-    height: 26px;
+    width: 1.35416vw;
+    height: 1.35416vw;
   }
 
   .tooltip {
     visibility: hidden;
-    width: 490px;
+    width: 25.5208vw;
     background: #FFFFD7;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
@@ -139,10 +147,10 @@
   }
 
   .tooltip-text {
-    width: 350px;
-    font-size: 15px;
+    width: 18.22916vw;
+    font-size: 0.78125vw;
     font-weight: 300;
-    padding: 19px 60px 19px 60px;
+    padding: 1.759259vh 3.125vw 1.759259vh 3.125vw;
   }
 
   .information-description:hover .tooltip {
@@ -153,54 +161,49 @@
   .highlighted-text-denied {
     text-decoration: underline 1px;
     cursor: pointer;
-    font-size: 22px;
-    margin-right: 13px;
+    font-size: 1.14583vw;
+    margin-right: 0.67708vw;
   }
 
   .highlighted-text {
-    font-size: 22px;
-    margin-right: 8px;
+    font-size: 1.1458vw;
+    margin-right: 0.4166vw;
   }
 
   .card-li {
-    margin-bottom: 30px;
+    margin-bottom: 2.77vh;
   }
 
   .card-title {
-    width: 525px;
-    padding-top: 16px;
+    width: 27.34375vw;
+    padding-top: 1.4814vh;
     font-weight: 700;
-    font-size: 24px;
-    line-height: 33px;
+    font-size: 1.25vw;
+    line-height: 3.055vh;
     word-wrap: break-word;
   }
 
   .adress {
     font-weight: 400;
-    font-size: 15px;
-    line-height: 27px;
+    font-size: 0.78125vw;
+    line-height: 2.5vh;
   }
 
-  .second-block__card {
-    position: absolute;
-    margin-top: -1.9em;
-    top: 50%;
-    right: 25px;
-  }
+  .second-block__card {}
 
   .number {
     font-weight: 400;
-    font-size: 24px;
-    line-height: 43px;
-    padding-top: 28px;
+    font-size: 1.25vw;
+    line-height: 3.9814vh;
+    padding-top: 2.59259vh;
   }
 
   .third-block__card {
-    margin-left: 235px;
+    margin-left: 12.23958vw;
   }
 
   .card-li:last-child {
-    margin-bottom: 100px;
+    margin-bottom: 9.2592vh;
   }
 
   .progress-information__btn {
@@ -208,14 +211,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 239.62px;
-    height: 54px;
+    width: 12.5vw;
+    height: 5vh;
     background: #E0E0D6;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
     font-weight: 600;
-    font-size: 15px;
-    line-height: 28px;
+    font-size: 0.78125vw;
+    line-height: 2.5925925vh;
     color: rgba(27, 31, 59, 0.4);
   }
 
@@ -227,300 +230,5 @@
   .progress-information__btn:active,
   .progress-information__btn:active {
     background: #8EBD9D !important;
-  }
-}
-
-@media screen and (max-width: 1450px) {
-  .return-to-main {
-    width: calc(0.75*180px);
-    margin-left: calc(0.75*168px);
-    margin-bottom: calc(0.83*65px);
-    margin-top: calc(0.83*18px);
-  }
-
-  .return-button {
-    margin-right: calc(0.75*18px);
-    width: calc(0.75*16px);
-    height: calc(0.83*16px);
-  }
-
-  .return-to-main span {
-    font-size: calc(0.75*15px);
-    line-height: calc(0.83*20px);
-  }
-
-  .main-top-content {
-    margin-left: calc(0.75*202px);
-    margin-top: calc(0.83*65px);
-  }
-
-  .profile-navigation {
-    width: calc(0.75*238px);
-    margin-right: calc(0.75*60px);
-    margin-top: calc(0.83*31px);
-    margin-bottom: calc(0.83*600px);
-  }
-
-  .profile-navigation li {
-    font-size: calc(0.75*20px);
-    line-height: calc(0.83*177.69%);
-    margin-bottom: calc(0.83*16px);
-  }
-
-  .title {
-    font-size: calc(0.75*28px);
-    line-height: calc(0.83*38px);
-    margin-bottom: calc(0.83*11px);
-  }
-
-  .description {
-    font-size: calc(0.75*24px);
-    line-height: calc(0.83*43px);
-  }
-
-  .explanations {
-    margin-top: calc(0.83*45px);
-    padding-left: calc(0.75*27px);
-  }
-
-  .explanations-li {
-    max-width: calc(0.75*158px);
-    font-size: calc(0.75*15px);
-    line-height: calc(0.83*27px);
-  }
-
-  .explanations-li {
-    margin-right: calc(0.75*118px);
-  }
-
-  .card {
-    padding-left: calc(0.75*27px);
-    padding-bottom: calc(0.83*15px);
-    width: calc(0.75*1070px);
-    height: calc(0.83*99px);
-  }
-
-  .information-description {
-    margin-left: calc(0.75*7px);
-    margin-top: calc(0.83*15px);
-  }
-
-  .information-description img {
-    width: calc(0.83*26px);
-    height: calc(0.83*26px);
-  }
-
-  .tooltip {
-    width: calc(0.75*490px);
-    top: calc(100% + 10px);
-    left: 46%;
-    transform: translateX(-50%);
-  }
-
-  .tooltip-text {
-    width: calc(0.75*350px);
-    font-size: calc(0.75*15px);
-    padding: calc(0.83*19px) calc(0.75*60px) calc(0.83*19px) calc(0.75*60px);
-  }
-
-  .highlighted-text-denied {
-    font-size: calc(0.75*22px);
-    margin-right: calc(0.75*13px);
-  }
-
-  .highlighted-text {
-    font-size: calc(0.75*22px);
-    margin-right: calc(0.75*8px);
-  }
-
-  .card-li {
-    margin-bottom: calc(0.83*30px);
-  }
-
-  .card-title {
-    width: calc(0.75*525px);
-    padding-top: calc(0.83*16px);
-    font-size: calc(0.75*24px);
-    line-height: calc(0.83*33px);
-  }
-
-  .adress {
-    font-size: calc(0.75*15px);
-    line-height: calc(0.83*27px);
-  }
-
-  .second-block__card {
-    margin-top: calc(0.83*-1.9em);
-    right: calc(0.75*25px);
-  }
-
-  .number {
-    font-size: calc(0.75*24px);
-    line-height: calc(0.83*43px);
-    padding-top: calc(0.83*28px);
-  }
-
-  .third-block__card {
-    margin-left: calc(0.75*235px);
-  }
-
-  .card-li:last-child {
-    margin-bottom: calc(0.83*100px);
-  }
-
-  .progress-information__btn {
-    width: calc(0.75*239.62px);
-    height: calc(0.83*54px);
-    padding: calc(0.83*13px) calc(0.75*63px);
-    font-size: calc(0.75*15px);
-    line-height: calc(0.83*28px);
-  }
-}
-
-@media screen and (max-width: 1370px) {
-  .return-to-main {
-    width: calc(0.71*180px);
-    margin-left: calc(0.71*168px);
-    margin-bottom: calc(0.71*65px);
-    margin-top: calc(0.71*18px);
-  }
-
-  .return-button {
-    margin-right: calc(0.71*18px);
-    width: calc(0.71*16px);
-    height: calc(0.71*16px);
-  }
-
-  .return-to-main span {
-    font-size: calc(0.71*15px);
-    line-height: calc(0.71*20px);
-  }
-
-  .main-top-content {
-    margin-left: calc(0.71*202px);
-    margin-top: calc(0.71*65px);
-  }
-
-  .profile-navigation {
-    width: calc(0.71*238px);
-    margin-right: calc(0.71*60px);
-    margin-top: calc(0.71*31px);
-    margin-bottom: calc(0.71*600px);
-  }
-
-  .profile-navigation li {
-    font-size: calc(0.71*20px);
-    line-height: calc(0.71*177.69%);
-    margin-bottom: calc(0.71*16px);
-  }
-
-  .title {
-    font-size: calc(0.71*28px);
-    line-height: calc(0.71*38px);
-    margin-bottom: calc(0.71*11px);
-  }
-
-  .description {
-    font-size: calc(0.71*24px);
-    line-height: calc(0.71*43px);
-  }
-
-  .explanations {
-    margin-top: calc(0.71*45px);
-    padding-left: calc(0.71*27px);
-  }
-
-  .explanations-li {
-    max-width: calc(0.71*158px);
-    font-size: calc(0.71*15px);
-    line-height: calc(0.71*27px);
-  }
-
-  .explanations-li {
-    margin-right: calc(0.71*118px);
-  }
-
-  .card {
-    padding-left: calc(0.71*27px);
-    padding-bottom: calc(0.71*15px);
-    width: calc(0.71*1070px);
-    height: calc(0.71*99px);
-  }
-
-  .information-description {
-    margin-left: calc(0.71*7px);
-    margin-top: calc(0.71*15px);
-  }
-
-  .information-description img {
-    width: calc(0.71*26px);
-    height: calc(0.71*26px);
-  }
-
-  .tooltip {
-    width: calc(0.71*490px);
-    top: calc(100% + 10px);
-    left: 46%;
-    transform: translateX(-50%);
-  }
-
-  .tooltip-text {
-    width: calc(0.71*350px);
-    font-size: calc(0.71*15px);
-    padding: calc(0.71*19px) calc(0.71*60px) calc(0.71*19px) calc(0.71*60px);
-  }
-
-  .highlighted-text-denied {
-    font-size: calc(0.71*22px);
-    margin-right: calc(0.71*13px);
-  }
-
-  .highlighted-text {
-    font-size: calc(0.71*22px);
-    margin-right: calc(0.71*8px);
-  }
-
-  .card-li {
-    margin-bottom: calc(0.71*30px);
-  }
-
-  .card-title {
-    width: calc(0.71*525px);
-    padding-top: calc(0.71*16px);
-    font-size: calc(0.71*24px);
-    line-height: calc(0.71*33px);
-  }
-
-  .adress {
-    font-size: calc(0.71*15px);
-    line-height: calc(0.71*27px);
-  }
-
-  .second-block__card {
-    margin-top: calc(0.71*-1.9em);
-    right: calc(0.71*25px);
-  }
-
-  .number {
-    font-size: calc(0.71*24px);
-    line-height: calc(0.71*43px);
-    padding-top: calc(0.71*28px);
-  }
-
-  .third-block__card {
-    margin-left: calc(0.71*235px);
-  }
-
-  .card-li:last-child {
-    margin-bottom: calc(0.71*100px);
-  }
-
-  .progress-information__btn {
-    width: calc(0.71*239.62px);
-    height: calc(0.71*54px);
-    padding: calc(0.71*13px) calc(0.71*63px);
-    font-size: calc(0.71*15px);
-    line-height: calc(0.71*28px);
-
   }
 }
