--- a/src/app/components/registration-page/registration-page.component.css
+++ b/src/app/components/registration-page/registration-page.component.css
@@ -12,46 +12,40 @@
 
 @media screen and (max-width: 5000px) {
   .header-container {
-    width: 1578.49px;
-    height: 94.5px;
-    margin-top: 27px;
-    margin-left: 172px;
-    margin-bottom: 34px;
+    width: 82.21302083333335vw;
+    height: 8.75vh;
+    margin-top: 2.5vh;
+    margin-left: 8.958333333333334vw;
+    margin-bottom: 3.148148148148148vh;
     border-bottom: 2px solid #e9e9e9;
   }
 
   .header-container a {
     font-weight: 300;
-    font-size: 48px;
-    line-height: 56px;
+    font-size: 2.5vw;
+    line-height: 5.185185185185185vh;
   }
 
   .logo-img1 {
     position: absolute;
-    width: 50px;
-    height: 49.74px;
-    left: 165px;
-    top: 30px;
+    width: 2.604166666666667vw;
+    height: 4.605555555555556vh;
+    left: 8.59375vw;
+    top: 2.77777778vh;
 
     background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
     filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
     transform: rotate(117.88deg);
     border-radius: 50%;
     z-index: -1;
-
-    /* background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
-  filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
-  transform: rotate(117.88deg);
-  border-radius: 50%;
-  opacity: 50%; */
   }
 
   .logo-img2 {
     position: absolute;
-    width: 50px;
-    height: 49.74px;
-    left: 1032px;
-    top: 162px;
+    width: 2.604166666666667vw;
+    height: 4.605555555555556vh;
+    left: 53.75vw;
+    top: 15vh;
 
     background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
     filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
@@ -61,8 +55,8 @@
   }
 
   .container-registration {
-    width: 1246px;
-    margin-left: 337px;
+    width: 64.89583333333333vw;
+    margin-left: 17.552083333333332vw;
   }
 
   .container-registration q {
@@ -70,45 +64,45 @@
   }
 
   .welcome {
-    width: 871px;
-    font-size: 48px;
+    width: 45.364583333333336vw;
+    font-size: 2.5vw;
     line-height: 120%;
-    padding-left: 177px;
-    margin-bottom: 37px;
+    padding-left: 9.21875vw;
+    margin-bottom: 3.425925925925926vh;
   }
 
   .registration {
-    height: 560px;
+    height: 51.85185185185185vh;
     background: rgba(190, 218, 195, 0.7);
     border-radius: 20px;
   }
 
   .info {
-    font-size: 28px;
-    line-height: 38px;
-    padding-top: 26px;
-    padding-left: 59px;
-    margin-bottom: 21px;
+    font-size: 1.4583333333333333vw;
+    line-height: 3.5185185185185186vh;
+    padding-top: 2.4074074074074074vh;
+    padding-left: 3.0729166666666665vw;
+    margin-bottom: 1.9444444444444444vh;
   }
 
   .input-field {
-    width: 560px;
-    height: 70px;
+    width: 29.166666666666668vw;
+    height: 6.481481481481481vh;
     border-radius: 20px;
-    margin-left: 61px;
+    margin-left: 3.177083333333333vw;
     background: #FBFBF5;
-    margin-bottom: 20px;
+    margin-bottom: 1.8518518518518516vh;
   }
 
   .input-field input {
-    width: 528px;
-    height: 67px;
+    width: 27.500000000000004vw;
+    height: 6.203703703703703vh;
     font-weight: 300;
-    font-size: 15px;
-    line-height: 28px;
-    padding-left: 28px;
-    margin-top: 2px;
-    margin-left: 2px;
+    font-size: 0.78125vw;
+    line-height: 2.5925925925925926vh;
+    padding-left: 1.4583333333333333vw;
+    margin-top: 0.1851851851851852vh;
+    margin-left: 0.10416666666666667vw;
     background: #FBFBF5;
     border-radius: 20px;
   }
@@ -118,13 +112,13 @@
   }
 
   .sign-up {
-    width: 275px;
-    height: 54px;
-    margin-top: 40px;
+    width: 14.322916666666666vw;
+    height: 5.0vh;
+    margin-top: 3.7037037037037033vh;
     background: #E0E0D6;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
-    margin-left: 485px;
+    margin-left: 25.260416666666668vw;
   }
 
   .sign-up:hover {
@@ -147,18 +141,18 @@
     height: 100%;
     color: rgba(27, 31, 59, 0.6);
     font-weight: 600;
-    font-size: 15px;
-    line-height: 28px;
+    font-size: 0.78125vw;
+    line-height: 2.5925925925925926vh;
   }
 
   .helper-text {
-    font-size: 15px;
+    font-size: 0.78125vw;
   }
 
   .red-text {
     display: inline-block;
     color: red;
-    padding-top: 7px;
+    padding-top: 0.6481481481481481vh;
   }
 
   .invalid {}
@@ -170,18 +164,18 @@
 
   .flex-registration {
     display: flex;
-    gap: 144px;
+    gap: 7.5vw;
   }
 
   .flex-registration .choose-account {
-    font-size: 28px;
-    line-height: 38px;
-    margin-top: 53px;
-    margin-bottom: 22px;
+    font-size: 1.4583333333333333vw;
+    line-height: 3.5185185185185186vh;
+    margin-top: 4.907407407407407vh;
+    margin-bottom: 2.037037037037037vh;
   }
 
   .first+label {
-    margin-bottom: 26px;
+    margin-bottom: 2.4074074074074074vh;
   }
 
   .custom-radio {
@@ -195,16 +189,16 @@
     align-items: center;
     user-select: none;
     font-weight: 300;
-    font-size: 24px;
+    font-size: 1.25vw;
     line-height: 177.69%;
   }
 
   .custom-radio+label::before {
     content: '';
     display: inline-block;
-    width: 22.6px;
-    height: 24px;
-    margin-right: 26.4px;
+    width: 1.1770833333333335vw;
+    height: 2.2222222222222223vh;
+    margin-right: 1.375vw;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 100% 100%;
@@ -212,263 +206,8 @@
 
   .radio .help {
     font-weight: 300;
-    font-size: 20px;
+    font-size: 1.0416666666666665vw;
     color: rgba(0, 0, 0, 0.6);
-    padding-left: 50px;
-  }
-}
-
-@media screen and (max-width: 1450px) {
-  .header-container {
-    width: calc(0.75*1578.49px);
-    height: calc(0.83*94.5px);
-    margin-top: calc(0.83*27px);
-    margin-left: calc(0.75*172px);
-    margin-bottom: calc(0.83*34px);
-  }
-
-  .header-container a {
-    font-size: calc(0.75*48px);
-    line-height: calc(0.83*56px);
-  }
-
-  .logo-img1 {
-    width: calc(0.75*50px);
-    height: calc(0.83*49.74px);
-    left: calc(0.75*165px);
-    top: calc(0.83*30px);
-  }
-
-  .logo-img2 {
-    width: calc(0.75*50px);
-    height: calc(0.83*49.74px);
-    left: calc(0.75*1032px);
-    top: calc(0.83*162px);
-  }
-
-  .container-registration {
-    width: calc(0.75*1246px);
-    margin-left: calc(0.75*337px);
-  }
-
-  .welcome {
-    width: calc(0.75*871px);
-    font-size: calc(0.75*48px);
-    line-height: 120%;
-    padding-left: calc(0.75*177px);
-    margin-bottom: calc(0.83*37px);
-  }
-
-  .registration {
-    height: calc(0.83*560px);
-    background: rgba(190, 218, 195, 0.7);
-  }
-
-  .info {
-    font-size: calc(0.75*28px);
-    line-height: calc(0.83*38px);
-    padding-top: calc(0.83*26px);
-    padding-left: calc(0.75*59px);
-    margin-bottom: calc(0.83*21px);
-  }
-
-  .input-field {
-    width: calc(0.75*560px);
-    height: calc(0.83*70px);
-    margin-left: calc(0.75*61px);
-    margin-bottom: calc(0.83*20px);
-  }
-
-  .input-field input {
-    width: calc(0.75*528px);
-    height: calc(0.83*67px);
-    font-size: calc(0.75*15px);
-    line-height: calc(0.83*28px);
-    padding-left: calc(0.75*28px);
-    margin-top: calc(0.83*2px);
-    margin-left: calc(0.75*2px);
-  }
-
-  .last-field {
-    margin-bottom: 0;
-  }
-
-  .sign-up {
-    width: calc(0.75*275px);
-    height: calc(0.83*54px);
-    margin-top: calc(0.83*40px);
-    margin-left: calc(0.75*485px);
-  }
-
-  .btn-sign-up {
-    font-size: calc(0.75*15px);
-    line-height: calc(0.83*28px);
-  }
-
-  .helper-text {
-    font-size: calc(0.75*15px);
-  }
-
-  .red-text {
-    padding-top: calc(0.83*7px);
-  }
-
-  .flex-registration {
-    display: flex;
-    gap: calc(0.75*144px);
-  }
-
-  .flex-registration .choose-account {
-    font-size: calc(0.75*28px);
-    line-height: calc(0.83*38px);
-    margin-top: calc(0.83*53px);
-    margin-bottom: calc(0.83*22px);
-  }
-
-  .first+label {
-    margin-bottom: calc(0.83*26px);
-  }
-
-  .custom-radio+label {
-    font-size: calc(0.75*24px);
-    line-height: calc(0.83*177.69%);
-  }
-
-  .custom-radio+label::before {
-    width: calc(0.75*22.6px);
-    height: calc(0.83*24px);
-    margin-right: calc(0.75*26.4px);
-  }
-
-  .radio .help {
-    font-size: calc(0.75*20px);
-    padding-left: calc(0.75*50px);
-  }
-}
-
-@media screen and (max-width: 1370px) {
-  .header-container {
-    width: calc(0.71*1578.49px);
-    height: calc(0.71*94.5px);
-    margin-top: calc(0.71*27px);
-    margin-left: calc(0.71*172px);
-    margin-bottom: calc(0.71*34px);
-  }
-
-  .header-container a {
-    font-size: calc(0.71*48px);
-    line-height: calc(0.71*56px);
-  }
-
-  .logo-img1 {
-    width: calc(0.71*50px);
-    height: calc(0.71*49.74px);
-    left: calc(0.71*165px);
-    top: calc(0.71*30px);
-  }
-
-  .logo-img2 {
-    width: calc(0.71*50px);
-    height: calc(0.71*49.74px);
-    left: calc(0.71*1032px);
-    top: calc(0.71*162px);
-  }
-
-  .container-registration {
-    width: calc(0.71*1246px);
-    margin-left: calc(0.71*337px);
-  }
-
-  .welcome {
-    width: calc(0.71*871px);
-    font-size: calc(0.71*48px);
-    line-height: 120%;
-    padding-left: calc(0.71*177px);
-    margin-bottom: calc(0.71*37px);
-  }
-
-  .registration {
-    height: calc(0.71*560px);
-  }
-
-  .info {
-    font-size: calc(0.71*28px);
-    line-height: calc(0.71*38px);
-    padding-top: calc(0.71*26px);
-    padding-left: calc(0.71*59px);
-    margin-bottom: calc(0.71*21px);
-  }
-
-  .input-field {
-    width: calc(0.71*560px);
-    height: calc(0.71*70px);
-    margin-left: calc(0.71*61px);
-    margin-bottom: calc(0.71*20px);
-  }
-
-  .input-field input {
-    width: calc(0.71*528px);
-    height: calc(0.71*67px);
-    font-size: calc(0.71*15px);
-    line-height: calc(0.71*28px);
-    padding-left: calc(0.71*28px);
-    margin-top: calc(0.71*2px);
-    margin-left: calc(0.71*2px);
-  }
-
-  .last-field {
-    margin-bottom: 0;
-  }
-
-  .sign-up {
-    width: calc(0.71*275px);
-    height: calc(0.71*54px);
-    margin-top: calc(0.71*40px);
-    margin-left: calc(0.71*485px);
-  }
-
-  .btn-sign-up {
-    font-size: calc(0.71*15px);
-    line-height: calc(0.71*28px);
-  }
-
-  .helper-text {
-    font-size: calc(0.71*15px);
-  }
-
-  .red-text {
-    padding-top: calc(0.71*7px);
-  }
-
-  .flex-registration {
-    display: flex;
-    gap: calc(0.71*144px);
-  }
-
-  .flex-registration .choose-account {
-    font-size: calc(0.71*28px);
-    line-height: calc(0.71*38px);
-    margin-top: calc(0.71*53px);
-    margin-bottom: calc(0.71*22px);
-  }
-
-  .first+label {
-    margin-bottom: calc(0.71*26px);
-  }
-
-  .custom-radio+label {
-    font-size: calc(0.71*24px);
-    line-height: calc(0.71*177.69%);
-  }
-
-  .custom-radio+label::before {
-    width: calc(0.71*22.6px);
-    height: calc(0.71*24px);
-    margin-right: calc(0.71*26.4px);
-  }
-
-  .radio .help {
-    font-size: calc(0.71*20px);
-    padding-left: calc(0.71*50px);
+    padding-left: 2.604166666666667vw;
   }
 }
