--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -2,41 +2,41 @@
   .footer-container {
     display: flex;
     width: 100%;
-    height: 300px;
+    height: 27.77777777777778vh;
     background: #E0E0D6;
     margin-top: auto;
   }
 
   .footer-logo-container {
-    padding-top: 79px;
-    padding-left: 160px;
-    margin-right: 237px;
+    padding-top: 7.314814814814814vh;
+    padding-left: 8.333333333333332vw;
+    margin-right: 12.34375vw;
   }
 
   .footer-logo-container .logo {
-    width: 116px;
-    height: 87.72px;
+    width: 6.041666666666667vw;
+    height: 8.122222222222222vh;
   }
 
   .politics {
-    margin-top: 23px;
-    margin-bottom: 10px;
+    margin-top: 2.1296296296296298vh;
+    margin-bottom: 0.9259259259259258vh;
   }
 
   .footer-logo-container p {
-    font-size: 10px;
+    font-size: 0.5208333333333333vw;
     color: #FFFFFF;
   }
 
   .footer-part-one {
-    padding-top: 77px;
-    margin-right: 64px;
+    padding-top: 7.12962962962963vh;
+    margin-right: 3.3333333333333335vw;
   }
 
   .footer-part-one li {
     font-weight: 300;
-    font-size: 15px;
-    margin-bottom: 13px;
+    font-size: 0.78125vw;
+    margin-bottom: 1.2037037037037037vh;
   }
 
   .footer-part-one li:last-child {
@@ -45,20 +45,20 @@
 
   .footer-part-one .main-page {
     font-weight: 400;
-    line-height: 30px;
-    font-size: 22px;
+    line-height: 2.7777777777777777vh;
+    font-size: 1.1458333333333333vw;
   }
 
   .footer-part-two {
-    padding-top: 77px;
-    font-size: 15px;
-    margin-right: 493px;
+    padding-top: 7.12962962962963vh;
+    font-size: 0.78125vw;
+    margin-right: 25.677083333333332vw;
   }
 
   .footer-part-two li {
     font-weight: 300;
-    font-size: 15px;
-    margin-bottom: 13px;
+    font-size: 0.78125vw;
+    margin-bottom: 1.2037037037037037vh;
   }
 
   .footer-part-two li:last-child {
@@ -67,19 +67,19 @@
 
   .footer-part-two .profile {
     font-weight: 400;
-    font-size: 22px;
-    line-height: 30px;
+    font-size: 1.1458333333333333vw;
+    line-height: 2.7777777777777777vh;
   }
 
   .footer-part-three {
-    padding-top: 77px;
-    font-size: 15px;
+    padding-top: 7.12962962962963vh;
+    font-size: 0.78125vw;
   }
 
   .footer-part-three li {
     font-weight: 300;
-    font-size: 15px;
-    margin-bottom: 13px;
+    font-size: 0.78125vw;
+    margin-bottom: 1.2037037037037037vh;
   }
 
   .footer-part-three li:last-child {
@@ -88,177 +88,7 @@
 
   .footer-part-three .contacts {
     font-weight: 400;
-    font-size: 22px;
-    line-height: 30px;
-  }
-}
-
-@media screen and (max-width: 1450px) {
-  .footer-container {
-    width: calc(0.75*2000px);
-    height: calc(0.83*300px);
-  }
-
-  .footer-logo-container {
-    padding-top: calc(0.83*79px);
-    padding-left: calc(0.75*160px);
-    margin-right: calc(0.75*237px);
-  }
-
-  .footer-logo-container .logo {
-    width: calc(0.83*116px);
-    height: calc(0.83*87.72px);
-  }
-
-  .politics {
-    margin-top: calc(0.83*23px);
-    margin-bottom: calc(0.83*10px);
-  }
-
-  .footer-logo-container p {
-    font-size: calc(0.75*10px);
-  }
-
-  .footer-part-one {
-    padding-top: calc(0.83*77px);
-    margin-right: calc(0.75*64px);
-  }
-
-  .footer-part-one li {
-    font-size: calc(0.75*15px);
-    margin-bottom: calc(0.83*13px);
-  }
-
-  .footer-part-one li:last-child {
-    margin-bottom: 0;
-  }
-
-  .footer-part-one .main-page {
-    line-height: calc(0.83*30px);
-    font-size: calc(0.75*22px);
-  }
-
-  .footer-part-two {
-    padding-top: calc(0.83*77px);
-    font-size: calc(0.75*15px);
-    margin-right: calc(0.75*493px);
-  }
-
-  .footer-part-two li {
-    font-size: calc(0.75*15px);
-    margin-bottom: calc(0.83*13px);
-  }
-
-  .footer-part-two li:last-child {
-    margin-bottom: 0;
-  }
-
-  .footer-part-two .profile {
-    font-size: calc(0.75*22px);
-    line-height: calc(0.83*30px);
-  }
-
-  .footer-part-three {
-    padding-top: calc(0.83*77px);
-    font-size: calc(0.75*15px);
-  }
-
-  .footer-part-three li {
-    font-size: calc(0.75*15px);
-    margin-bottom: calc(0.83*13px);
-  }
-
-  .footer-part-three li:last-child {
-    margin-bottom: 0;
-  }
-
-  .footer-part-three .contacts {
-    font-size: calc(0.75*22px);
-    line-height: calc(0.83*30px);
-  }
-}
-
-@media screen and (max-width: 1370px) {
-  .footer-container {
-    width: calc(0.71*2000px);
-    height: calc(0.71*300px);
-  }
-
-  .footer-logo-container {
-    padding-top: calc(0.71*79px);
-    padding-left: calc(0.71*160px);
-    margin-right: calc(0.71*237px);
-  }
-
-  .footer-logo-container .logo {
-    width: calc(0.71*116px);
-    height: calc(0.71*87.72px);
-  }
-
-  .politics {
-    margin-top: calc(0.71*23px);
-    margin-bottom: calc(0.71*10px);
-  }
-
-  .footer-logo-container p {
-    font-size: calc(0.71*10px);
-  }
-
-  .footer-part-one {
-    padding-top: calc(0.71*77px);
-    margin-right: calc(0.71*64px);
-  }
-
-  .footer-part-one li {
-    font-size: calc(0.71*15px);
-    margin-bottom: calc(0.71*13px);
-  }
-
-  .footer-part-one li:last-child {
-    margin-bottom: 0;
-  }
-
-  .footer-part-one .main-page {
-    line-height: calc(0.71*30px);
-    font-size: calc(0.71*22px);
-  }
-
-  .footer-part-two {
-    padding-top: calc(0.71*77px);
-    font-size: calc(0.71*15px);
-    margin-right: calc(0.71*493px);
-  }
-
-  .footer-part-two li {
-    font-size: calc(0.71*15px);
-    margin-bottom: calc(0.71*13px);
-  }
-
-  .footer-part-two li:last-child {
-    margin-bottom: 0;
-  }
-
-  .footer-part-two .profile {
-    font-size: calc(0.71*22px);
-    line-height: calc(0.71*30px);
-  }
-
-  .footer-part-three {
-    padding-top: calc(0.71*77px);
-    font-size: calc(0.71*15px);
-  }
-
-  .footer-part-three li {
-    font-size: calc(0.71*15px);
-    margin-bottom: calc(0.71*13px);
-  }
-
-  .footer-part-three li:last-child {
-    margin-bottom: 0;
-  }
-
-  .footer-part-three .contacts {
-    font-size: calc(0.71*22px);
-    line-height: calc(0.71*30px);
+    font-size: 1.1458333333333333vw;
+    line-height: 2.7777777777777777vh;
   }
 }
